# scd-pkcs11

./: .gitignore  Makefile.in  README.md  common.h  compile.ps1  configure  configure.ac  pkcs11-impl.c  pkcs11.h  pkcs11t.h  scd.c  scd.h  sec.c  sec.h
